[gd_scene load_steps=4 format=3 uid="uid://dfqcen7aye16k"]

[ext_resource type="Script" uid="uid://bf3gyjo1lqu48" path="res://Scenes/ConfirmationModal/confirmation_modal.gd" id="1_bissh"]
[ext_resource type="PackedScene" uid="uid://cambpmv5v3opa" path="res://CustomControls/EnhancedButton/enhanced_button.tscn" id="3_itklm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nn7n"]
bg_color = Color(0, 0, 0, 1)

[node name="ConfirmationModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bissh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.415686)

[node name="Modal" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(128, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3nn7n")

[node name="MarginContainer" type="MarginContainer" parent="Modal"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="Label" parent="Modal/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1
uppercase = true

[node name="Message" type="Label" parent="Modal/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Message body here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Confirm" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_itklm")]
unique_name_in_owner = true
modulate = Color(0.286275, 0.72549, 0.176471, 1)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "Confirm"
metadata/_custom_type_script = "uid://4hhnbaprkawe"

[node name="Cancel" parent="Modal/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_itklm")]
unique_name_in_owner = true
modulate = Color(0.753122, 0.0516036, 9.62615e-08, 1)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_font_sizes/font_size = 48
text = "Cancel"
metadata/_custom_type_script = "uid://4hhnbaprkawe"

[connection signal="pressed" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Modal/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
